--- a/README
+++ b/README
@@ -1,6 +1,8 @@
-#Tasks
+# CityStateLookup
 Create a new repo named CityStateLookup.  The code for this project should be placed there and pushed separately to GitHub.
 
+## index.html
 Create an index.html that contains two separate dropdowns.  The first will contain a list of states.  The second will contain a list of cities for the state selected in the first dropdown.  A suggested UI is shown in the Lecture Outline.
 
+## Array
 Create an array of data for your page.  It should resemble the following but may contain more states that you add to make the project more fun:
